--- a/task03-one-piece-website/scss/_config.scss
+++ b/task03-one-piece-website/scss/_config.scss
@@ -8,4 +8,18 @@ body {
   font-family: $font;
   font-size: $font-size;
   font-weight: 700;
+
+  padding: 0px $padding-desktop !important;
+}
+
+@include media-breakpoint-down(lg) {
+  body {
+    padding: 0px $padding-tablet !important;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  body {
+    padding: 0px $padding-mobile !important;
+  }
 }
