--- a/task03-one-piece-website/scss/_consts.scss
+++ b/task03-one-piece-website/scss/_consts.scss
@@ -30,3 +30,10 @@ $color-grey-2: #b5b5b5;
 $color-grey-3: #dcdcdc;
 $color-grey-4: #ececec;
 $color-grey-5: #f3f3f3;
+
+$padding-desktop: 170px;
+$padding-tablet: 64px;
+$padding-mobile: 16px;
+
+$navbar__height: 100px;
+$navbar__height--mobile: 78px;
